account-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-service-deployment
  namespace: develop
  labels:
    app: banking-service
    env: develop
spec:
  selector:
    matchLabels:
      app: banking-service
  template:
    metadata:
      labels:
        app: banking-service
    spec:
      containers:
        - name: banking-service
          image: igorarizadevelop/banking-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - protocol: TCP
              name: http
              containerPort: 8080
          resources:
            limits:
              memory: 512Mi
              cpu: '0.1'
            requests:
              memory: 256Mi
              cpu: '0.05'
