account-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-service
  labels:
    app: banking-service
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: banking-service
