account-service/k8s/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-service-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-service
                port:
                  number: 7800
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: banking-service
                port:
                  number: 8080
